--- a/src/styles/css/_archive.scss
+++ b/src/styles/css/_archive.scss
@@ -79,7 +79,7 @@
 
       &.isActive {
         .subInfo {
-          background: rgba($secondary, 0.35);
+          background: rgba(31, 194, 167, 0.5);
         }
         &.very .subInfo {
           background: rgba($secondary, 0.75);
@@ -91,7 +91,7 @@
           background: rgba(#E2630D, 0.35);
         }
         &.new .subInfo {
-          background: rgba(#1F92C2, 0.35);
+          background: rgba(#1F92C2, 0.6);
         }
         &.satisfied .subInfo {
           background: rgba($black, 0.15);
