--- a/src/styles/css/_recordLayout.scss
+++ b/src/styles/css/_recordLayout.scss
@@ -290,7 +290,7 @@ hr {
 
     .inputTag {
       flex-basis: 40px;
-      background: $offWhite;
+      background: #e8e8e8;
       position: relative;
 
       a {
